--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,5 +6,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: hello
-      - run: echo |
+        run: echo |
           echo "hello world"
