--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,6 @@ jobs:
           echo "hello world"
       - name : run python script
         run: |
-          ppi install -r requirements.txt
+          pip install -r requirements.txt
           python ci.py
           
