--- a/.github/workflows/secret.yaml
+++ b/.github/workflows/secret.yaml
@@ -6,5 +6,5 @@ jobs:
     steps:
     - run: echo $MY_SVAR
       env:
-        MY_VAR: ${{ secretes.MY_SECRET}}
+        MY_VAR: ${{ secrets.MY_SECRET}}
       
