--- a/.github/workflows/vars.yaml
+++ b/.github/workflows/vars.yaml
@@ -16,3 +16,7 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: see payload
+        run: echo "PAYLOAD:\n${PAYLOAD}\n"
+        env: 
+          PAYLOAD: ${{ toJSON(github.event }}
