--- a/.github/workflows/vars.yaml
+++ b/.github/workflows/vars.yaml
@@ -19,4 +19,4 @@ jobs:
       - name: see payload
         run: echo "PAYLOAD:\n${PAYLOAD}\n"
         env: 
-          PAYLOAD: ${{ toJSON(github.event }}
+          PAYLOAD: ${{ toJSON(github.event) }}
