--- a/.github/workflows/vars.yaml
+++ b/.github/workflows/vars.yaml
@@ -20,3 +20,8 @@ jobs:
         run: echo "PAYLOAD:\n${PAYLOAD}\n"
         env: 
           PAYLOAD: ${{ toJSON(github.event) }}
+      - name: print something from the payload
+        run: echo "${PUSHER} pushed this and their email is ${EMAIL}
+        env:
+          PUSHER: ${{ github.event.pusher.name }}
+          EMAIL: ${{ github.event.pusher.email }}
