--- a/.github/workflows/vars.yaml
+++ b/.github/workflows/vars.yaml
@@ -21,7 +21,7 @@ jobs:
         env: 
           PAYLOAD: ${{ toJSON(github.event) }}
       - name: print something from the payload
-        run: echo "${PUSHER} pushed this and their email is ${EMAIL}
+        run: echo "${PUSHER} pushed this and their email is ${EMAIL}"
         env:
           PUSHER: ${{ github.event.pusher.name }}
           EMAIL: ${{ github.event.pusher.email }}
