--- a/.github/workflows/ci-cd-wandb-pr.yaml
+++ b/.github/workflows/ci-cd-wandb-pr.yaml
@@ -12,7 +12,7 @@ permissions:
   
 jobs:
   search-pr-comment: 
-    if: (github.event.issue.pull_request != null) && contains(github.event.comment.body, '/wandb')
+    # if: (github.event.issue.pull_request != null) && contains(github.event.comment.body, '/wandb')
     runs-on: ubuntu-latest
     steps:
 
