--- a/.github/workflows/ci-cd-wandb-pr.yaml
+++ b/.github/workflows/ci-cd-wandb-pr.yaml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: install dependencies
-      run: pip install ghapi wandb
+      run: pip install ghapi wandb wandb-workspaces
       
     - name: Parse value from the command
       id: get-runid-value
